--- a/app/views/venues/update.js.erb
+++ b/app/views/venues/update.js.erb
@@ -7,4 +7,4 @@ retrieveSeasonTeams(selection)
 $("#static-venueslist").load(location.href + " #infoc");
 $("#team-main").load(location.href + " #team-info");
 //update event data to match new venue data
-updateEventAttributes(selection, "<%= @old_venue_name %>","<%= @venue.name %>", 'nil', 'nil')
+updateEventVenues(selection, "<%= @old_venue_name %>","<%= @venue.name %>")
