--- a/app/views/teams/details.js.erb
+++ b/app/views/teams/details.js.erb
@@ -1,7 +1,12 @@
 $("#team-info").empty().fadeIn();
+//member form
+$("#member-form").remove()//clear the previous site
+$("body").prepend("<div id='member-form'> \
+<%= j form_tag([@account, @team, @team.members.build], id: 'float-form-table') %>
+</div>");
 //team title and tool bar
 $("#team-info").append("<form action='/accounts/test/teams/<%= @slug %>' accept-charset='UTF-8' data-remote='true' method='put'><h2><span id='name' class='editable'><%= @name %></span><div class='shapeable-block' id='edit-team'>EDIT</div><%= escape_javascript link_to( 'DELETE', [@account, @team], method: :delete, remote:true,  class: 'shapeable-cblock') %></h2><p class='editable' id='description'><%= @desc %></p></form>");
-$("#team-info").append("<h3>Team Members:</h3> \
+$("#team-info").append("<h3>Team Members: <span class='shapeable-block' id='new-member'>+MEMBER</span></h3> \
 <% if @members.blank? %> \
   <p>No team members.</p><div \
 <% else %> \
@@ -11,7 +16,7 @@ $("#team-info").append("<h3>Team Members:</h3> \
     <%= content_tag :tr do %> \
       <%= j content_tag :td, m.name, class: 'wide-cell' %> \
       <%= j content_tag :td, m.email, class: 'wide-cell a-right' %> \
-      <%= j content_tag :td, link_to(image_tag('trash.png', size:'16x16'), new_account_team_member_path(@account, @team, m.id), class: 'shapeable-cblock', method: :delete), class: 'wide-cell a-right' %> \
+      <%= j content_tag :td, link_to(image_tag('trash.png', size:'16x16'), account_team_member_path(@account, @team, m.id), class: 'shapeable-cblock', method: :delete), class: 'wide-cell a-right' %> \
     <% end %> \
   <% end %> \
   </table> \
