--- a/app/views/events/show.js.erb
+++ b/app/views/events/show.js.erb
@@ -29,4 +29,4 @@ $('body').prepend(" \
   <% else %> \
       <%= escape_javascript image_tag 'note.png', size:'16x16' %> <span class='editable blobinput' id='description'>Add a description</span> \
   <% end %></p></div>\
-</div>")
+</div>");
