--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -1,72 +1,49 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.menu{ font-family: 'Open Sans', sans-serif; font-weight: bold;}
+div.center_wrapper{
+	text-align: center;
+}
 div.menublock {
 	display: inline-block;
-	background: #F1F1F1;
-	width:100%;
+	width:75%;
 	height: auto;
-	border-bottom: 1px solid #CFCFCF;
-	box-shadow: 0px -1px 7px #888888;
+	margin: 0 auto;
 }
 
-div.menutitlecontainer{
+img.menutitle{
 	float: left;
-}
-div.menutitle{
-	display: table-cell;
-	background: #F1F1F1;
-	height: 40px;
+	height: auto;
+	margin: 10px;
+
+	color: white;
 
 	vertical-align: middle;
 	text-align: center;
-	font-size: 25px;
+	font-size: 20px;
 	padding-left: 2em;
 	padding-right: 0.5em;
 }
-
-.menucontainer{
-	float: right;
-	margin: 0;
-    padding: 0;
-    list-style-type: none;
-}
-.menucontainer > li{ float: left; }
-.menuitem:hover > ul{
-	visibility: visible;
-	z-index: 1;
-}
-.menuitem > ul > li:hover{
-	background: #19A3D1;
-	color: white;
-}
-.menuitem > ul{
-	padding: 0;
-	list-style-type: none;
-	background: #127292;
-
-	position: absolute;
-	top: 2.99vw;
-	right: 0;
-
-    visibility: hidden;
-	text-align: center;
-	color: white;
-	font-size: 14px;
-
+.valign{
+	position: relative;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
 }
 .menuitem {
-	position: relative;
-  display: block;
-	height: 40px;
-	background: #F1F1F1;
+	margin: 10px;
 
-	line-height: 40px;
+	float: right;
+
+	border: 1px solid white;
+	border-radius: 5px;
+	color: white;
+
 	text-align: center;
-	font-size: 14px;
-	color: #333333;
-	padding-left: 0.5em;
-	padding-right: 0.5em;
+	font-size: 12px;
+	padding: 7px;
 
 	-webkit-transition: background .5s, color .25s;
 	transition: background .5s, color .25s;
@@ -74,6 +51,6 @@ div.menutitle{
 	transition-timing-function: ease-out;
 }
 .menuitem:hover{
-	background:#19A3D1;
-	color: white;
+	background: white;
+	color: #19A3D1;
 }
