--- a/app/assets/stylesheets/theme.css.scss
+++ b/app/assets/stylesheets/theme.css.scss
@@ -7,6 +7,15 @@ html, body {
     overflow: hidden;
 }/*force no horizontal scroll*/
 
+#landing{
+  background-image: url('/assets/landing.jpg');
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 #mask{
   position: fixed;
 
