image-url fix for landing page image

--- a/app/assets/stylesheets/theme.css.scss
+++ b/app/assets/stylesheets/theme.css.scss
@@ -8,7 +8,7 @@ html, body {
 }/*force no horizontal scroll*/
 
 #landing{
-  background-image: url('/assets/landing.jpg');
+  background-image: image-url('landing.jpg');
   background-repeat: no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
