--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -3,12 +3,12 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .menu{ font-family: 'Open Sans', sans-serif; font-weight: bold;}
 div.center_wrapper{
+	height: 84px;
 	text-align: center;
 }
 div.menublock {
 	display: inline-block;
-	width:75%;
-	height: auto;
+	width:90%;
 	margin: 0 auto;
 }
 
