--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -8,7 +8,7 @@
 .float-container{
   background: rgba(255,255,255,0.5);
   border-radius: 20px;
-
+  margin: 0 auto;
   text-align: center;
   width: 50%;
   min-width: 250px;
