--- a/app/assets/stylesheets/theme.css.scss
+++ b/app/assets/stylesheets/theme.css.scss
@@ -4,8 +4,23 @@ html, body {
     width: 100%;
 	  margin: 0px;
 	  padding: 0px;
-    overflow: hidden;
-}/*force no horizontal scroll*/
+    overflow-x: hidden;
+}
+
+.left-title{
+  position: fixed;
+  left: 5%;
+  top: 9%;
+  color: white;
+}
+
+.parting-block{
+  border-bottom: 50px solid white;
+  //border-left: solid rgba(255,255,255,0);
+  //border-left-width: 1366px;
+  height: 0;
+  width: 100%;
+}
 
 #landing{
   background-image: image-url('landing.jpg');
@@ -51,14 +66,12 @@ a, a:visited{
 }/*force no decoration*/
 
 div.maincontainer{
+  background: white;
 	position: absolute;
-	max-width: 100%;
-	height: 100%;
+  height: calc(100% - 134px);
 	width: 100%;
-	overflow: hidden;
 }
 div.subcontainer{
-  display: none;
 	width: auto;
   height: 80%;
   max-height: 80%;
