--- a/app/views/seasons/index.html.erb
+++ b/app/views/seasons/index.html.erb
@@ -1,4 +1,4 @@
-<body>
+<body id="landing">
   <div id="mask"></div>
   <%= render 'layouts/flash_msgs' %>
   <%= render 'layouts/header' %>
@@ -56,9 +56,8 @@
     </div>
     <% end %>
   </div>
+  <div class="parting-block"><h2 class="left-title">MANAGE</h2></div>
   <div class="maincontainer">
-    <div class="subcontainer">
-      <h2>Manage:</h2>
       <div id="season-main">
         <div id="season-select">
           <%= collection_select(current_account, :seasons_id, @seasons, :id, :title, {include_blank: "Select a season"}, {class: "large-selector", id: "s-season"}) %>
@@ -114,6 +113,5 @@
         <div id="team-info">
         </div>
       </div>
-    </div>
   </div>
 </body>
